# beamer-template_uge-inria

./: .gitignore  CMakeLists.txt  Demo_metro_b.tex  MesNotes.md  README.md  Ready2Go.tex  build.lua  latexmkrc  ready2Go.tex
Original/: Demo_WoMT.tex  Demo_metroUGE_dark43.tex  Demo_metroUGE_light169.tex  Simplest_example.tex
Parts/: Section-Beamer.tex  Section-MyPackages.tex
Resources/: Presentation.bib  UsersPackagesDefs.tex
Sources/: beamerouterthemeuge.sty  beamerthemeMetropolisBeamerExtra.sty
old/: ready2Go.tex
original/: Demo_WoMT.tex  documentation.tex
original/examples_CEA/: Demo_CEA_light169.tex
original/examples_Inria/: Demo_Inria_dark43.tex  Demo_Inria_light169.tex  Demo_metroInria_light169.tex  Demo_metroInria_persoPB.tex
original/examples_UGE/: Demo_UGE_dark43.tex  Demo_UGE_light169.tex  Demo_metroUGE_dark43.tex  Demo_metroUGE_light169.bbl-SAVE-ERROR  Demo_metroUGE_light169.tex  Demo_persoPB.tex
original/gotham-example/: gotham-example169transp.tex  gotham-example43dark.tex  gotham-exampleSimple.tex  pres.bib  section-Beamer.tex  section-BeamerExtra.tex  section-Conclusion.tex  section-Gotham.tex  section-MyPackages.tex
parts/: new-section.tex  new_part.tex  section-Beamer.tex  section-BeamerExtra.tex  section-Metropolis.tex  section-MyPackages.tex
resources/: UsersMathsCommands.tex  UsersPackagesDefs.tex  UsersSymbolsAcronyms.tex
sources/: beamerthemeBeamerExtra.sty  beamerthemegotham.sty  embedvideo.sty
sources/CEA/: beamercolorthemeCEA.sty  beamerfontthemeCEA.sty  beamerinnerthemeCEA.sty  beamerinnerthemecea.sty  beamerouterthemeCEA.sty  beamerouterthemecea.sty  beamerthemegothamCEA.sty
sources/Inria/: beamercolorthemeinria.sty  beamerfontthemeinria.sty  beamerinnerthemeinria.sty  beamerouterthemeinria.sty  beamerthemegothamInria.sty
sources/UGE/: beamercolorthemeuge.sty  beamerfontthemeuge.sty  beamerinnerthemeuge.sty  beamerouterthemeuge.sty  beamerthemegothamUGE.sty
sources/gotham/: beamercolorthemegotham.sty  (+8 more)
(+21 files in other folders)
